# django-gentelella-widgets

./: .editorconfig  .gitignore  .readthedocs.yml  AUTHORS  MANIFEST.in  Makefile  README.rst  Readme.rst  TODO.md  build.sh  makefile  package-lock.json  package.json  pylpfile.py  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  webpack.config.js
.github/workflows/: django.yml
assets/: index.js
demo/: manage.py
demo/demo/: asettings.py  asgi.py  asgi_worker.py  celery.py  dashboad.py  permissions.py  settings.py  urls.py  views.py
demo/demo/templates/: dashboard.html  index-color.html  index.html
demo/demoapp/: admin.py  api.py  apps.py  chartjs.py  cruds.py  datos.json  forms.py  formset.py  gtcharts.py  gtpermissions.py  gtselects.py  gtstoryline.py  gtstoryline2.py  gtstorymap.py  gttimeline.py  models.py  people_group.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
demo/demoapp/autocomplete/: forms.py  views.py
demo/demoapp/calendar/: forms.py  views.py
demo/demoapp/cardlist/: api.py  filterset.py  forms.py  serializer.py  views.py  viewsets.py
demo/demoapp/cleanable_fileinput/: forms.py  views.py
demo/demoapp/datatables/: api.py  serializer.py  views.py
demo/demoapp/date_range/: forms.py  view.py  views.py
demo/demoapp/digital_signature/: api.py  forms.py  serializers.py  views.py
demo/demoapp/editorTinymce/: forms.py  views.py
demo/demoapp/filechunckedupload/: forms.py  views.py
demo/demoapp/filechunkedupload/: views.py
demo/demoapp/flow/: utils.py  views.py
demo/demoapp/grid_slider/: forms.py  views.py
demo/demoapp/history/: forms.py  views.py
demo/demoapp/input_masks/: forms.py  views.py
demo/demoapp/media_upload/: forms.py  views.py
demo/demoapp/migrations/: 0001_initial.py  0002_auto_20200420_0129.py  0002_peoplegroup.py  0003_auto_20200616_2051.py  0003_catalog_onecatalog_withcatalog.py  0003_foo.py  (+52 more)
djgentelella/: __init__.py  admin.py  apps.py  chartjs.py  decorator.py  djgentelella  elements.py  groute.py  gtselects.py  models.py  models_manager.py  models_utils.py  objectmanagement.py  permissions.py  select_view.py  settings.py  tasks.py  urls.py  utils.py
djgentelella/async_notification/: admin.py  apps.py  forms.py  gtselects.py  introspection.py  models.py  preview.py  registry.py  resolvers.py  sending.py  serializers.py  settings.py  signals.py  tasks.py  urls.py  views.py
djgentelella/blog/: admin.py  apps.py  blog.py  fields.py  forms.py  models.py  urls.py  views.py  viewset.py
djgentelella/chunked_upload/: constants.py  models.py  response.py  utils.py  views.py
djgentelella/cruds/: base.py  filter.py  inline_crud.py  utils.py
djgentelella/datatables/: api.py  fields.py  serializer.py
djgentelella/decorators/: perms.py
djgentelella/editorTinymce/: views.py
djgentelella/fields/: catalog.py  drfdatetime.py  files.py  multiwidget.py  secure.py  tree.py
djgentelella/firmador_digital/: forms.py  models.py  models_utils.py  signvalue_utils.py  utils.py  views.py  viewsets.py
djgentelella/forms/: __init__.py  decorators.py  forms.py  models.py
djgentelella/history/: api.py  filterset.py  serializers.py  utils.py
djgentelella/menu_widgets/: palette.py
djgentelella/migrations/: 00012_defaultusecompessstatic.py  0001_initial.py  0001_squashed_new_initial.py  0002_alter_permissionscategorymanagement_options.py  0002_auto_20200214_2038.py  0003_alter_chunkedupload_status.py  0003_help.py  0004_help_help_title.py  0004_loadsettings.py  0005_notification.py  0006_gtdbfield_gtdbform.py  0006_permissionscategorymanagement.py  0007_edit_footer.py  0007_employee.py  0008_defaulttheme.py  0009_chunkedupload.py  0010_menuitem_position.py  0011_remove_menuitem_level_remove_menuitem_lft_and_more.py  0013_merge_20231012_0000.py  0013_permissionrelated.py  0013_usersignatureconfig.py  0014_trash.py  0015_trash_deleted_by.py  0016_trash_created_at.py  0017_alter_chunkedupload_status.py  0018_alter_chunkedupload_status.py  0019_alter_chunkedupload_status.py  0020_alter_chunkedupload_status.py
djgentelella/notification/: __init__.py  base.py  serializer.py  views.py  widgets.py
djgentelella/permission_management/: __init__.py  forms.py  objinterface.py  serializers.py  views.py  viewsets.py
djgentelella/reservation/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  product_manager.py  register.py  signals.py  urls.py  views.py
djgentelella/serializers/: __init__.py  calendar.py  firmador_digital.py  helper.py  paginators.py  secure.py  selects.py  storyline.py  storymap.py  timeline.py
djgentelella/static/: djgentelella.readonly.vendors.min.css  djgentelella.readonly.vendors.min.js
djgentelella/templatetags/: _utils.py  chart_tags.py  crud_tags.py  footer.py  gentelellamenu.py  gtpermissions.py  gtsettings.py  timejs.py  tree_tags.py  urlname_tags.py
djgentelella/tests/: API_test.py  Calendar_Test.py  NotificationDatatable.py  Notification_Test.py  StoryLine_Test.py  StoryMap_Test.py  TimeLine_Test.py  __init__.py
djgentelella/trash/: api.py  filterset.py  serializer.py
djgentelella/views/: auth.py  listAreaViewset.py  select2autocomplete.py  storyline.py  storymap.py  timeline.py
djgentelella/widgets/: calendar.py  cleanable_fileinput.py  color.py  core.py  countries.py  digital_signature.py  files.py  gridslider.py  helper.py  multiwidget.py  multiwidgets.py  numberknobinput.py  selects.py  storyline.py  storymap.py  tagging.py  timeline.py  tinymce.py  trees.py  wysiwyg.py
djgentelella/wysiwyg/: views.py
docs/: requirements.txt
docs/source/: autocomplete.rst  blog.rst  color.rst  conf.py  contents.rst  crud.rst  datatables.rst  daterange  demo.rst  drf_serializers.rst  elements.rst  firmador_digital.rst  forms.rst  grid_slider.rst  help.rst  history.rst  icons.rst  index.rst  inputmask.rst  installation.rst  introduction.rst  jslibraries.rst  knob.rst  menus.rst  model_fields.rst  notifications.rst  object_management.rst  pallete.rst  permissionmanagement.rst  settings.rst  templates.rst  trash.rst  widgets.rst
(+453 files in other folders)
